Bug #46994 (CLOB size does not update when using CLOB IN OUT param in stored procedure)